# scheduling

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.bat
.github/: copilot-instructions.md
app/: debug_math.py  streamlit_app.py
app/scheduler/: __init__.py  models.py  solver.py  solver_cpsat.py  validator.py
documentation/: ARCHITECTURE.md  CONSTRAINTS.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  PROBLEM_DESCRIPTION.md  SETUP.md  STAKEHOLDER_QUESTIONS.md  agent_prompt.md  readme.md  task_description.md
tests/: test_carry_forward.py  test_scheduler.py
