[project]
name = "dienstplan"
version = "0.1.0"
description = "Quarterly Notdienst scheduling app with Streamlit"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.0",
    "xlsxwriter>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "pylint>=3.0.0",
    "mypy>=1.7.0",
    "pandas-stubs>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pylint.messages_control]
disable = ["C0111", "R0913", "R0914", "R0915", "W0511"]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "df", "ma", "nd"]


[tool.hatch.build.targets.wheel]
packages = ["app"]
